--- a/site/src/assets/main.css
+++ b/site/src/assets/main.css
@@ -1,6 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import './base.css';
 
-#app {
+html, body, #app { height: 100%; }
+body { @apply bg-gray-100 text-gray-900; }
+
+/* #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -32,4 +39,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} */
